# medical-transcriber

./: .gitignore  README.md  main.py  pyproject.toml
app-frontend/: package-lock.json  package.json
app-frontend/public/: index.html
app-frontend/src/: App.js
app-frontend/src/components/: RecorderComponent.js  TranscriptListViewer.js  TranscriptViewer.js
app-frontend/src/pages/: index.js
src/: app.py
src/config/: constants.py
src/services/: transcriber.py
src/services/ai_services/: assembly.py  gemini.py  whisper.py
src/utils/: audio.py  file.py  json.py  logger.py
